objects/project_cloud__Financial_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Description__c</fullName>
        <inlineHelpText>Description of the financial snapshot</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field will show what Project the Financial Snapshot is related too.</inlineHelpText>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Financial Snapshots</relationshipLabel>
        <relationshipName>Financial_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Type__c</fullName>
        <description>Type / Reasoning for Financial Snapshot</description>
        <inlineHelpText>The type of or reasoning for why a snapshot was taken</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Month End</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Financial Snapshot</label>
    <nameField>
        <displayFormat>FS-{0}</displayFormat>
        <label>Financial Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>